# snes9x

./: CMakeLists.txt  README.md  memmap.cpp
cmake/: mips32-linux-gcc.cmake
opk/: default.gcw0.desktop  make_opk.sh
sdl/: i18n.cpp  i18n.h  input.cpp  main.cpp  video.cpp  video.h
translations/: messages.pot  update  zh_CN.po  zh_TW.po
